<resources>
    <string name="app_name">My English</string>

    <string name="text">Text</string>
    <string name="image">Image</string>

    <string name="word">Word:</string>
    <string name="type">Type:</string>
    <string name="define">Definition:</string>
    <string name="synonym">Synonym:</string>
    <string name="ori_sen">Original Sentence:</string>
    <string name="my_sen">My Sentence:</string>

    <string name="add">Add word</string>

    <string-array name="word_type">
        <item>verb</item>
        <item>noun</item>
        <item>adjective</item>
        <item>adverb</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>