<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_detail_word"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:text="@string/text"
                android:textColor="@color/black"
                android:textSize="48sp" />

            <ImageView
                android:id="@+id/iv_unfav"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical|end"
                android:contentDescription="@string/image"
                app:srcCompat="@drawable/ic_favorite" />

            <ImageView
                android:id="@+id/iv_fav"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical|end"
                android:contentDescription="@string/image"
                app:srcCompat="@drawable/ic_favorite_border" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/type"
            android:textColor="@color/blue"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_detail_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/text"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/define"
            android:textColor="@color/blue"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_detail_define"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/text"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/synonym"
            android:textColor="@color/blue"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_detail_synonym"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/text"
            android:textColor="@color/black"
            android:textSize="24sp" />

    </LinearLayout>
</ScrollView>